--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg website builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline web creator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="ZEAIni5ukL1n3EJzOFm/1/Hp9dbm7v/DmM9uULXs27QPr6J5IuDjckBWm08O/IX2AkaBIrz6gEW5EGIf2VCzkQPOhvFOBIl8HZkCNY+XAGA4cUythuE4JZ9JJvkBN8E/" data-form-email="true">
+                    <input type="hidden" value="zVp885XOiZ9JaUywgZPwV2Y3cZSxN5PQHzf4vgGCFnmXaGAcvWrFbiFCHkbX4N6SqeeaFz0lmam99PFX6aFBzii3+EF0Vxk9bBiTfKXSUog+6hrNef1FBydyeDq/hGiW" data-form-email="true">
 
                     
 
